refactor: 회원, 인증 분리, 토큰 발급 진행